--- a/views/create_post.pug
+++ b/views/create_post.pug
@@ -4,6 +4,17 @@ block content
     html
         head
         body
+            .animated-marquee
+                .animated-marquee-container.animated-marquee-foreground
+                    each card1 in ['','','','','','','','','','','','']
+                        .animated-marquee-card
+                .animated-marquee-container.animated-marquee-middleground
+                    each card1 in ['','','','','','','','','','','','']
+                        .animated-marquee-card
+
+                .animated-marquee-container.animated-marquee-background
+                    each card1 in ['','','','','','','','','','','','']
+                        .animated-marquee-card
             .question-box
                 h2 Would you like to say something?
                 |
@@ -30,7 +41,7 @@ block content
                     padding: 0;
                     margin: 0;
                     font-family: 'Sniglet', cursive;
-                    background-color: #98d4f3;
+                    background-color: #000;
                 }
 
                 .hidden {
@@ -163,6 +174,244 @@ block content
                     right: -20%;
                     transform-origin: 50% 50%;
                     animation: myoctoanimation 2s linear alternate infinite;
+                }
+
+                .animated-marquee {
+                    background: #1697e0;
+                    margin: 0 auto;
+                    min-height: 340px;
+                    overflow: hidden;
+                    position: fixed;
+                    height: 100%;
+                    width: 100%;
+                }
+
+                @-webkit-keyframes slide {
+                    0% {
+                        -webkit-transform: rotate(-22deg) skewX(-22.5deg) translate3d(-100%, 0, 0);
+                        opacity: 0;
+                    }
+                    5% {
+                        opacity: 1;
+                    }
+                    50% {
+                        opacity: .8;
+                    }
+                    85% {
+                        opacity: 1;
+                    }
+                    100% {
+                        -webkit-transform: rotate(-22deg) skewX(-22.5deg) translate3d(25%, 0, 0);
+                        opacity: 0;
+                    }
+                }
+
+                .animated-marquee-container {
+                    position: absolute;
+                    top: -55%;
+                    width: 200%;
+                    -webkit-animation: slide 18s linear infinite;
+                }
+
+                .animated-marquee-foreground {
+                    margin-top: 3em;
+                    -webkit-animation-duration: 42s;
+                    width: 300%;
+                    z-index: 200;
+                }
+
+                .animated-marquee-middleground {
+                    margin-top: 6em;
+                    -webkit-animation-duration: 60s;
+                    z-index: 100;
+                }
+
+                .animated-marquee-background {
+                    margin-top: 3em;
+                    /*-webkit-animation-delay: 250ms;*/
+                    -webkit-animation-duration: 100s;
+                    z-index: 0;
+                }
+
+                .animated-marquee-card {
+                    background: #fff;
+                    float: left;
+                    margin-top: -2%;
+                    margin-right: 2%;
+                    -webkit-transition: opacity 2s ease-out;
+                    height: 100px;
+                    position: relative;
+                    width: 8%;
+                }
+
+                .animated-marquee-foreground .animated-marquee-card {
+                    height: 200px;
+                    margin-right: 9%;
+                    opacity: .6;
+                    width: 320px;
+                }
+
+                .animated-marquee-middleground .animated-marquee-card {
+                    margin-right: 2%;
+                    opacity: .3;
+                }
+
+                .animated-marquee-background .animated-marquee-card {
+                    height: 50px;
+                    margin-right: 1%;
+                    margin-top: 1%;
+                    opacity: .2;
+                    width: 4%;
+                }
+
+                .card-footer {
+                    background-color: white;
+                    border-top: none;
+                }
+
+                .card-header {
+                    background-color: white;
+                    border-bottom: none;
+                }
+
+                .card-body {
+                    padding-top: 0 !important;
+                }
+
+                .animated-marquee-card:hover {
+                    opacity: .8 !important;
+                }
+
+                .animated-marquee-card:nth-child(3n+3) {
+                    left: 30%;
+                    top: 20%;
+                }
+
+                .animated-marquee-card:nth-child(8n+1) {
+                    right: 20%;
+                }
+
+                .animated-marquee-card:nth-child(4n+3) {
+                    top: 18%;
+                }
+
+                .animated-marquee-card:nth-child(3n+5) {
+                    bottom: 10%;
+                }
+
+                .animated-marquee-card:nth-child(3n+1) {
+                    visibility: hidden;
+                }
+
+                @media only screen and (max-width: 400px) {
+                    .animated-marquee {
+                        height: 340px;
+                    }
+
+                    .animated-marquee-container {
+                        -webkit-animation: slide 14s linear infinite;
+                    }
+
+                    .animated-marquee-foreground {
+                        margin-top: 3em;
+                        -webkit-animation-duration: 22s;
+                    }
+
+                    .animated-marquee-middleground {
+                        margin-top: 6em;
+                        -webkit-animation-duration: 40s;
+                    }
+
+                    .animated-marquee-background {
+                        margin-top: 3em;
+                        -webkit-animation-duration: 75s;
+                    }
+
+                    .animated-marquee-foreground .animated-marquee-card {
+                        height: 140px;
+                        margin-right: 12px;
+                        width: 220px;
+                    }
+
+                    .animated-marquee-middleground .animated-marquee-card {
+                        height: 50px;
+                        margin-right: 2%;
+                    }
+
+                    .animated-marquee-background .animated-marquee-card {
+                        height: 30px;
+                        width: 4%;
+                    }
+                }
+
+                @media only screen and (max-width: 767px) and (min-width: 401px) {
+                    .animated-marquee-container {
+                        top: -30%;
+                        width: 200%;
+                    }
+
+                    .animated-marquee-foreground .animated-marquee-card {
+                        height: 150px;
+                        margin-right: 10px;
+                        width: 240px;
+                    }
+
+                    .animated-marquee-middleground .animated-marquee-card {
+                        height: 50px;
+                        margin-right: 2%;
+                    }
+
+                    .animated-marquee-background .animated-marquee-card {
+                        height: 30px;
+                        width: 4%;
+                    }
+                }
+
+                @media only screen and (min-width: 1200px) {
+                    .animated-marquee-container {
+                        top: -55%;
+                    }
+
+                    .animated-marquee-foreground .animated-marquee-card {
+                        height: 180px;
+                        margin-right: 6%;
+                        width: 280px;
+                    }
+
+                    .animated-marquee-middleground .animated-marquee-card {
+                        margin-right: 1%;
+                        height: 120px;
+                        width: 170px;
+                    }
+
+                    .animated-marquee-background .animated-marquee-card {
+                        height: 42px;
+                        margin: 1px;
+                        width: 2.5%;
+                    }
+
+                    .animated-marquee-card:nth-child(2n+2) {
+                        left: 1%;
+                        top: 1%;
+                    }
+
+                    .animated-marquee-card:nth-child(5n+3) {
+                        right: 1%;
+                        top: 1%;
+                    }
+
+                    .animated-marquee-card:nth-child(2n+6) {
+                        top: 1%;
+                    }
+
+                    .animated-marquee-card:nth-child(6n+3) {
+                        bottom: 1%;
+                        right: 1%;
+                    }
+
+                    .animated-marquee-card:nth-child(3n+2) {
+                        visibility: hidden;
+                    }
                 }
             |
             script.
