--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,6 +6,7 @@ html(lang='en')
     meta(name='description' content='')
     meta(name='author' content='')
     link(rel='icon' href='/docs/4.0/assets/img/favicons/favicon.ico')
+    link( href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" rel="stylesheet")
     title= title
     link(rel='canonical' href='https://getbootstrap.com/docs/4.0/examples/sticky-footer-navbar/')
     // Bootstrap core CSS
@@ -37,9 +38,9 @@ html(lang='en')
     //Begin page content
     main.layoutcontainer(role='main')
       block content
-    footer.footer
-      .layoutcontainer
-        span.text-muted Place sticky footer content here.
+    //footer.footer
+    //  .layoutcontainer
+    //    span.text-muted Place sticky footer content here.
     //
       Bootstrap core JavaScript
       ==================================================
