--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,9 +13,9 @@ body {
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
-  background-color: #f5f5f5;
+  height: 41px;
+  line-height: 41px; /* Vertically center the text there */
+  background-color: #000000;
 }
 
 
