--- a/views/index.pug
+++ b/views/index.pug
@@ -1,4 +1,4 @@
-extends layout
+//extends layout
 block content
   html
     head
@@ -53,7 +53,7 @@ block content
         box-sizing: border-box;
         }
         body {
-            background: #f6f5f7;
+            background: #000000;
             font-family: "Nunito", sans-serif;
             display: flex;
             flex-direction: column;
