--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,6 +11,7 @@ html(lang='en')
     link(rel='canonical' href='https://getbootstrap.com/docs/4.0/examples/sticky-footer-navbar/')
     // Bootstrap core CSS
     link(href='//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css' rel='stylesheet')
+    link(href='//ksylvest.github.io/jquery-growl/stylesheets/jquery.growl.css' rel='stylesheet')
     // Custom styles for this template
     link(href='/stylesheets/style.css' rel='stylesheet')
   body
@@ -50,6 +51,14 @@ html(lang='en')
     script(src='//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js')
     block scripts
     |
+    script(src='http://localhost:8080/socket.io/socket.io.js')
+    script(src='//ksylvest.github.io/jquery-growl/javascripts/jquery.growl.js')
+    script.
+        var socket = io.connect('http://localhost:8080');
+        socket.emit('subscribe', 'user-#{logged_in_user_id}');
+        socket.on('message', function (data) {
+          $.growl.notice({title: "Nice!", message: data.message.user_name + " liked your post", location: 'br'});
+        });
     block style
     Style.
       .btn{
