--- a/views/layout.pug
+++ b/views/layout.pug
@@ -28,12 +28,14 @@ html(lang='en')
                 | Home
                 span.sr-only (current)
             li.nav-item
+              a.nav-link.disabled(href='/profile/' + logged_in_user_id) Profile
+            li.nav-item
               a.nav-link(href='/postlist') Posts
             li.nav-item
               a.nav-link.disabled(href='/notifications') Notifications
+            li.nav-item
+              a.nav-link(href='/chat') Chat
           form.form-inline.mt-2.mt-md-0
-            input.form-control.mr-sm-2(type='text' placeholder='Search' aria-label='Search')
-            button.btn.btn-outline-success.my-2.my-sm-0(type='submit') Search
             a.btn.btn-outline-danger.my-2.my-sm-0(href='/signout') Log Out
 
     //Begin page content
