--- a/views/profile.pug
+++ b/views/profile.pug
@@ -1,7 +1,20 @@
 extends layout
 block content
 
+    .animated-marquee
+        .animated-marquee-container.animated-marquee-foreground
+            each card1 in ['','','','','','','','','','','','']
+                .animated-marquee-card
+        .animated-marquee-container.animated-marquee-middleground
+            each card1 in ['','','','','','','','','','','','']
+                .animated-marquee-card
+
+        .animated-marquee-container.animated-marquee-background
+            each card1 in ['','','','','','','','','','','','']
+                .animated-marquee-card
+
     .flexbox-right
+
         a.profile-picture
             img(src='https://image.flaticon.com/icons/png/512/174/174316.png' width='100%' height='100%' alt='')
     #dropdownmenu.flexbox-col
@@ -29,15 +42,13 @@ block content
                     p.profile-bio
                         | Welcome to my profile ♡
                         br
-                        |                         Follow me plz
-                        br
-                        br
                         span @Otheruser
 
-                img(src='https://cdn.discordapp.com/attachments/805885199313141800/847564478287446046/bulle-chat_53876-25540-removebg.png' width='50px' height='50px' alt='')
-    h1(style='margin-top:28px').mt-5 Posts list
+                //img(src='https://cdn.discordapp.com/attachments/805885199313141800/847564478287446046/bulle-chat_53876-25540-removebg.png' width='50px' height='50px' alt='')
+    img(src='https://o.remove.bg/downloads/16f77784-e8b1-4cf6-a2e1-2f58834bf28a/240_F_318567416_HlcuiOYyBl9WbbEd25adAWXy3LHqVdmc-removebg-preview.png' style="position:relative; margin-top: '-51px'; margin-left: 322px")
+    h1(style='margin-top:28px position: relative ').mt-5 Posts list
     .bouton_4
-        a(href='render_create_form' )
+        a(href='/render_create_form' )
             i.fas.fa-plus(style="font-size: 20px;color: white;padding: 11px;")
             //img(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/173024/caddie.png')
             span.texteduboutton_4 Add Post
@@ -56,9 +67,6 @@ block content
                         div.card-body(style='font-family:sans-serif;color: #313131;font-size: 15px;font-weight: lighter;letter-spacing: 2px;')='' + post.body
                         div.card-footer
                             div.float-right
-                                //a.btn.btn-success(href="/render_edit_form/" + post._id) Update
-                                //a.btn.btn-danger(href='/delete_post/' + post._id, onclick="return confirm('Are you sure ?')") Delete
-
                                 .row
                                     .delete-confirm.delete-confirm-delete
                                         button.delete
@@ -217,6 +225,9 @@ block scripts
 
 block style
     Style.
+        .imageProfile {
+            border-radius: 50%;
+        }
         .card{
             margin-top:2em;
              font-family: cursive;
@@ -240,12 +251,15 @@ block style
             margin-right: 8px;
         }
         .h1, h1 {
+
+          font-size: 56px;
           text-align: center;
-          /*padding-top: 2em;*/
+          position:relative;
+          padding-top: 0em;
           font-family:cursive;
           color:#fff;
-            padding-right:73px;
-            margin-top: 28px;
+          padding-right:73px;
+          margin-top: 28px;
         }
         .animated-marquee{
           background: #1697e0;
@@ -1421,4 +1435,121 @@ block style
                 .profile-page-block a {
                 font-size: calc(var(--paragraph) - .2em);
                 }
+                }
+        .animated-marquee-card:hover{
+                  opacity: .8 !important;
+                }
+
+                .animated-marquee-card:nth-child(3n+3){
+                  left: 30%;
+                  top: 20%;
+                }
+                .animated-marquee-card:nth-child(8n+1){
+                  right: 20%;
+                }
+                .animated-marquee-card:nth-child(4n+3){
+                  top: 18%;
+                }
+                .animated-marquee-card:nth-child(3n+5){
+                  bottom: 10%;
+                }
+                .animated-marquee-card:nth-child(3n+1){
+                  visibility: hidden;
+                }
+
+                @media only screen and (max-width: 400px){
+                .animated-marquee{
+                    height: 340px;
+                }
+                .animated-marquee-container{
+                    -webkit-animation: slide 14s linear infinite;
+                }
+
+                .animated-marquee-foreground{
+                    margin-top: 3em;
+                    -webkit-animation-duration: 22s;
+                }
+                .animated-marquee-middleground{
+                    margin-top: 6em;
+                    -webkit-animation-duration: 40s;
+                }
+                .animated-marquee-background{
+                    margin-top: 3em;
+                    -webkit-animation-duration: 75s;
+                }
+                .animated-marquee-foreground .animated-marquee-card{
+                    height: 140px;
+                    margin-right: 12px;
+                    width: 220px;
+                }
+
+                .animated-marquee-middleground .animated-marquee-card{
+                    height: 50px;
+                    margin-right: 2%;
+                }
+
+                .animated-marquee-background .animated-marquee-card{
+                    height: 30px;
+                    width: 4%;
+                }
+                }
+                @media only screen and (max-width: 767px) and (min-width: 401px){
+                .animated-marquee-container{
+                    top: -30%;
+                    width: 200%;
+                }
+                .animated-marquee-foreground .animated-marquee-card{
+                    height: 150px;
+                    margin-right: 10px;
+                    width: 240px;
+                }
+
+                .animated-marquee-middleground .animated-marquee-card{
+                    height: 50px;
+                    margin-right: 2%;
+                }
+                .animated-marquee-background .animated-marquee-card{
+                    height: 30px;
+                    width: 4%;
+                  }
+                }
+                @media only screen and (min-width: 1200px){
+                  .animated-marquee-container{
+                    top: -55%;
+                  }
+                .animated-marquee-foreground .animated-marquee-card{
+                    height: 180px;
+                    margin-right: 6%;
+                    width: 280px;
+                  }
+
+                .animated-marquee-middleground .animated-marquee-card{
+                    margin-right: 1%;
+                    height: 120px;
+                    width: 170px;
+                  }
+
+                .animated-marquee-background .animated-marquee-card{
+                    height: 42px;
+                    margin: 1px;
+                    width: 2.5%;
+                  }
+                .animated-marquee-card:nth-child(2n+2){
+                    left: 1%;
+                    top: 1%;
+                  }
+                .animated-marquee-card:nth-child(5n+3){
+                    right: 1%;
+                    top: 1%;
+                  }
+                .animated-marquee-card:nth-child(2n+6){
+                    top: 1%;
+                  }
+                .animated-marquee-card:nth-child(6n+3){
+                    bottom: 1%;
+                    right: 1%;
+                  }
+                .animated-marquee-card:nth-child(3n+2){
+                    visibility: hidden;
+                  }
                 }
