--- a/views/updateProf.pug
+++ b/views/updateProf.pug
@@ -1,5 +1,16 @@
 extends layout
 block content
+        .animated-marquee
+            .animated-marquee-container.animated-marquee-foreground
+                each card1 in ['','','','','','','','','','','','']
+                    .animated-marquee-card
+            .animated-marquee-container.animated-marquee-middleground
+                each card1 in ['','','','','','','','','','','','']
+                    .animated-marquee-card
+
+            .animated-marquee-container.animated-marquee-background
+                each card1 in ['','','','','','','','','','','','']
+                    .animated-marquee-card
         mixin input(type, label,value,name)
             .input-container
                 input(type='#{type}' id='#{label}' value=value name=name required )
@@ -33,7 +44,7 @@ block style
     Style.
         @charset "UTF-8";
         body {
-          background: #e9e9e9;
+          background: #000;
           color: #666666;
           font-family: "RobotoDraft", "Roboto", sans-serif;
           font-size: 14px;
