--- a/views/view_posts.pug
+++ b/views/view_posts.pug
@@ -31,7 +31,7 @@ block content
                     div.card
                         div.card-header
                             span(style='font-family:sans-serif;font-size: 20px;')='' + post.user.name + '  '
-                            a(href='/chat/'+post.user._id, title='Start a Chat')
+                            a(href='/chat/'+post.user._id, title='Start a Chat' style='font-size: x-large;')
                                 span.fas.fa-comments
 
 
