--- a/views/layout.pug
+++ b/views/layout.pug
@@ -51,8 +51,6 @@ html(lang='en')
     script(src='//code.jquery.com/jquery-3.2.1.slim.min.js' integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN' crossorigin='anonymous')
     script(src='//cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js')
     script(src='//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js')
-    block scripts
-    |
     script(src='http://localhost:8080/socket.io/socket.io.js')
     script(src='//ksylvest.github.io/jquery-growl/javascripts/jquery.growl.js')
     script.
@@ -61,6 +59,19 @@ html(lang='en')
         socket.on('message', function (data) {
           $.growl.notice({title: "Nice!", message: data.message.user_name + " liked your post", location: 'br'});
         });
+
+        // Listen to incoming messages of type 'chat_message'
+        socket.on('chat_message', function (data) {
+          let chat_page = (window.location.href.indexOf('chat') >= 0) ? true : false;
+          if (chat_page) {
+            let text = data.message;
+            $('.conversation-container').append('<div class="message received">' + text + '<span class="metadata"><span class="time"></span></span></div>');
+          } else {
+            $.growl.notice({title: "Nice!", message: "You have received new <a href='http://localhost:3000/chat/"+data.sender_id+"'>chat message</a>.", location: 'br'});
+          }
+        });
+    block scripts
+    |
     block style
     Style.
       .btn{
