--- a/views/listNot.pug
+++ b/views/listNot.pug
@@ -111,7 +111,7 @@ block content
                     font-family: cursive;}
 
                 .animated-marquee {
-                    background: #1697e0;
+                    background: #92c9e8;
                     margin: 0 auto;
                     min-height: 340px;
                     overflow: hidden;
