--- a/views/view_posts.pug
+++ b/views/view_posts.pug
@@ -162,7 +162,7 @@ block style
           color:#fff;
         }
         .animated-marquee{
-          background: #1697e0;
+          background: #92c9e8;
           margin: 0 auto;
           min-height: 340px;
           overflow: hidden;
