--- a/views/create_post.pug
+++ b/views/create_post.pug
@@ -144,40 +144,9 @@ block content
                     border: none;
                 }
 
-                /* Animation */
-                @keyframes myfishanimation {
-                    0% {
-                        margin-left: -235px
-                    }
-                    70% {
-                        margin-left: 100%;
-                    }
-                    100% {
-                        margin-left: 100%;
-                    }
-                }
-
-                @keyframes myoctoanimation {
-                    from {
-                        transform: translate3d(0, 0, 0);
-                    }
-                    to {
-                        transform: translate3d(0, 200px, 0);
-                    }
-                }
-
-                .octo {
-                    background-image: url('http://www.geertjanhendriks.nl/codepen/form/octo.png');
-                    width: 66px;
-                    height: 97px;
-                    position: absolute;
-                    right: -20%;
-                    transform-origin: 50% 50%;
-                    animation: myoctoanimation 2s linear alternate infinite;
-                }
 
                 .animated-marquee {
-                    background: #1697e0;
+                    background: #92c9e8;
                     margin: 0 auto;
                     min-height: 340px;
                     overflow: hidden;
