--- a/views/updateProf.pug
+++ b/views/updateProf.pug
@@ -35,7 +35,7 @@ block content
                     +input('text','email',user_email,'email')
                     input(type='hidden', name='logged_in_user_id', value=user_id)
                     +button('go')
-            .card.alt(style='background:#ed2553;z-index:0;padding:2em')
+            .card.alt(style='z-index:0;padding:1em')
                 img(src='https://cdn.discordapp.com/attachments/828672528938434670/847643603324108810/pen.png')
 
 
@@ -44,7 +44,8 @@ block style
     Style.
         @charset "UTF-8";
         body {
-          background: #000;
+          overflow: hidden;
+          background: #bed7e2;
           color: #666666;
           font-family: "RobotoDraft", "Roboto", sans-serif;
           font-size: 14px;
@@ -214,14 +215,14 @@ block style
         }
         .card .title {
           position: relative;
-          z-index: 1;
-          border-left: 5px solid #ed2553;
-          margin: 0 0 35px;
-          padding: 10px 0 10px 50px;
-          color: #ed2553;
-          font-size: 32px;
-          font-weight: 600;
-          text-transform: uppercase;
+              z-index: 1;
+              border-left: 5px solid #ff9797;
+              margin: 0 0 35px;
+              padding: 10px 0 10px 50px;
+              color: #ff9797;
+              font-size: 32px;
+              font-weight: 600;
+              text-transform: uppercase;
         }
         .card .input-container {
           position: relative;
@@ -293,7 +294,8 @@ block style
           display: inline-block;
           background: 0;
           width: 240px;
-          border: 2px solid #e3e3e3;
+         border: 2px solid #ff9797;
+             color: #ff9797 !important;
           padding: 20px 0;
           font-size: 24px;
           font-weight: 600;
@@ -305,7 +307,7 @@ block style
         .card .button-container button span {
           position: relative;
           z-index: 1;
-          color: #ddd;
+          color: #ff9797;
           transition: 0.3s ease;
         }
         .card .button-container button:before {
@@ -351,13 +353,13 @@ block style
           color: #bababa;
         }
         .card.alt {
+        background: #ff97a8;
           position: absolute;
-          top: 40px;
-          right: -70px;
+          top: 70px;
+              right: -19px;
           z-index: 10;
-          width: 140px;
-          height: 140px;
-          background: none;
+          width: 70px;
+          height: 70px;
           border-radius: 100%;
           box-shadow: none;
           padding: 0;
