--- a/views/update_post.pug
+++ b/views/update_post.pug
@@ -166,7 +166,7 @@ block content
                 }
 
                 .animated-marquee {
-                    background: #1697e0;
+                    background: #92c9e8;
                     margin: 0 auto;
                     min-height: 340px;
                     overflow: hidden;
