--- a/views/listNot.pug
+++ b/views/listNot.pug
@@ -26,7 +26,7 @@ block content
                                 div.card
                                     div.card-header
                                         .label
-                                            li='User Id: ' + notification.userId + ', Post Id: ' + notification.postId + ', Created at: ' + notification.createdAt
+                                            li='User name: ' + notification.user.userName + ', Post Id: ' + notification.postId + ', Created at: ' + notification.createdAt
                     else
                         h4.mt-5 No notifications found
 
@@ -49,7 +49,7 @@ block content
                 }
 
 
-                .question-box, .form-box, .thanks-msg-box {
+                .question-box {
                     width: 30%;
                     position: absolute;
                     top: 50%;
@@ -59,6 +59,7 @@ block content
                     flex-direction: column;
                     align-items: center;
                     text-align: center;
+                    margin-top: 164px;
                 }
 
                 input, textarea {
@@ -84,25 +85,7 @@ block content
                     font-size: 24px;
                     font-family: serif;
                 }
-                @keyframes myoctoanimation {
-                    from {
-                        transform: translate3d(0, 0, 0);
-                    }
-                    to {
-                        transform: translate3d(0, 200px, 0);
-                    }
-                }
 
-
-                .octo {
-                    background-image: url('http://www.geertjanhendriks.nl/codepen/form/octo.png');
-                    width: 66px;
-                    height: 97px;
-                    position: absolute;
-                    right: -20%;
-                    transform-origin: 50% 50%;
-                    animation: myoctoanimation 2s linear alternate infinite;
-                }
                 .card{
                     margin-top: 15px;
                 }
